--- a/.xmobarrc
+++ b/.xmobarrc
@@ -11,9 +11,10 @@ Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
                     , Run Swap [] 10
                     , Run Com "uname" ["-s","-r"] "" 36000
                     , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
-                    ]
+                    , Run Battery ["-t","Batt: % / ","-L","25","-H","75","-h","green","-n","yellow","-l","red","--","-c","energy_full"] 10
+		    ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%cpu% | %memory% * %swap% | %eth0% , %ppp0% }{ <fc=#ee9a00>%date%</fc> | %VOBG% | %uname%"
+       , template = "%cpu% | %memory% * %swap% | %eth0% , %ppp0% | %battery% }{%acpi% | <fc=#ee9a00>%date%</fc> | %VOBG% | %uname%"
        }
 
