--- a/.xmobarrc
+++ b/.xmobarrc
@@ -3,9 +3,10 @@ Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
        , fgColor = "grey"
        , position = Top
 --       , lowerOnStart = False
-       , commands = [ Run Weather "VOBG" ["-t","<station>: <tempC>C","-L","21","-H","33","--normal","green","--high","red","--low","lightblue"] 600
+       , commands = [ Run Weather "KPIT" ["-t","<station>: <tempC>C","-L","0","-H","20","--normal","green","--high","red","--low","lightblue"] 600
                     , Run Network "eth0" ["-L","0","-H","32","--normal","green","--high","red"] 10
                     , Run Network "ppp0" ["-L","0","-H","32","--normal","green","--high","red"] 10
+                    , Run Network "wlan0" ["-L","0","-H","32","--normal","green","--high","red"] 10
                     , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
@@ -15,6 +16,6 @@ Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
 		    ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%cpu% | %memory% * %swap% | %eth0% , %ppp0% | %battery% }{<fc=#0000ff>%acpi%</fc> | <fc=#ee9a00>%date%</fc> | %VOBG% | %uname%"
+       , template = "%cpu% | %memory% * %swap% | %wlan0% }{<fc=#0000ff>%acpi%</fc> | <fc=#ee9a00>%date%</fc> | %KPIT% | %uname%"
        }
 
